--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scaleble=no，minimum-scale=1.0，maxmum-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no，minimum-scale=1.0，maxmum-scale=1.0">
     <title>bsxp</title>
   </head>
   <body>
